# simpleCppServer

./: CMakeLists.txt  Server.cpp  ThreadPool.cpp  ThreadPool.h  configs.h
Controller/: Controller.cpp  Controller.h
Model/: Cache.cpp  Cache.h  ContentModel.cpp  ContentModel.h  MultiPartModel.cpp  MultiPartModel.h  RequestModel.cpp  RequestModel.h  Response.cpp  Response.h  SinhVien.cpp  SinhVien.h
Repo/: DbPool.cpp  DbPool.h  PoolManager.h  Querry.cpp  Querry.h  SinhVienRepo.cpp  SinhVienRepo.h
Services/: CacheService.cpp  CacheService.h  CheckInService.cpp  CheckInService.h  FileUpLoadServices.cpp  FileUpLoadServices.h
